[package]
name = "zmark"
about = "Manages and extracts meta information from markdown files."
version = "0.1.0"
edition = "2018"
author = "Leonardo Sa"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.5.4"
lazy_static = "1.4.0"
clap = { version = "3.1.0", features = ["derive", "color", "suggestions"] }
tabular = "0.2.0"
